--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "gh-pages": "^6.1.1",
     "react-scripts": "^5.0.1",
     "typescript": "^4.1.2"
   },
