--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "emerson-react-coding-challenge",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://syss69.github.io/bemyvalentine/",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -22,6 +23,8 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test"
